add light state endpoint
