# api/swagger.yaml
@@ -23,6 +23,18 @@ definitions:
           type: string
         type: array
     type: object
+  routes.LightStateFailedChangeResponse:
+    properties:
+      message:
+        type: string
+      status:
+        type: string
+    type: object
+  routes.LightStateSuccessfulChangeResponse:
+    properties:
+      status:
+        type: string
+    type: object
   routes.SoundFailedPlayResponse:
     properties:
       message:
@@ -94,6 +106,31 @@ paths:
           schema:
             $ref: '#/definitions/routes.ColorsListResponse'
       summary: Get available colors to change to
+  /lights/{state}:
+    post:
+      description: Only supports states of on/off
+      parameters:
+      - description: State to set lights to (on/off)
+        in: path
+        name: state
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/routes.LightStateSuccessfulChangeResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/routes.LightStateFailedChangeResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/routes.LightStateFailedChangeResponse'
+      summary: Change state of configured lights
   /sound/{sound}:
     post:
       description: Play halloween sound supported in sound list
