# internal/routes/lights.go
@@ -3,6 +3,7 @@ package routes
 import (
 	"fmt"
 	"net/http"
+	"strings"
 
 	"github.com/amimof/huego"
 	"github.com/circa10a/witchonstephendrive.com/internal/colors"
@@ -25,6 +26,17 @@ type ColorFailedChangeResponse struct {
 	Status          string   `json:"status"`
 	Message         string   `json:"message"`
 	SupportedColors []string `json:"supportedColors"`
+}
+
+// LightStateSuccessfulChangeResponse responds with status string
+type LightStateSuccessfulChangeResponse struct {
+	Status string `json:"status"`
+}
+
+// LightStateFailedChangeResponse responds with status string, reason for failure in message
+type LightStateFailedChangeResponse struct {
+	Status  string `json:"status"`
+	Message string `json:"message"`
 }
 
 // colors godoc
@@ -75,6 +87,52 @@ func colorChangeHandler(c echo.Context) error {
 		}
 	}
 	return c.JSON(http.StatusOK, &ColorSuccessfulChangeResponse{
+		Status: successString,
+	})
+}
+
+// :state godoc
+// @Summary Change state of configured lights
+// @Description Only supports states of on/off
+// @Produce json
+// @Success 200 {object} LightStateSuccessfulChangeResponse
+// @Failure 400 {object} LightStateFailedChangeResponse
+// @Failure 500 {object} LightStateFailedChangeResponse
+// @Router /lights/{state} [post]
+// @Param state path string true "State to set lights to (on/off)"
+func lightsStateHandler(c echo.Context) error {
+	state := strings.ToLower(c.Param("state"))
+	hueLights := c.Get("hueLights").([]huego.Light)
+
+	// Check for on/off states
+	if state != "on" && state != "off" {
+		return c.JSON(http.StatusBadRequest, LightStateFailedChangeResponse{
+			Status:  failedString,
+			Message: fmt.Sprintf("received state: %v. on/off are the only valid values", state),
+		})
+	}
+	// Loop through lights and change state accordingly
+	for _, light := range hueLights {
+		if state == "on" {
+			err := light.On()
+			if err != nil {
+				return c.JSON(http.StatusInternalServerError, LightStateFailedChangeResponse{
+					Status:  failedString,
+					Message: err.Error(),
+				})
+			}
+		}
+		if state == "off" {
+			err := light.Off()
+			if err != nil {
+				return c.JSON(http.StatusInternalServerError, LightStateFailedChangeResponse{
+					Status:  failedString,
+					Message: err.Error(),
+				})
+			}
+		}
+	}
+	return c.JSON(http.StatusOK, LightStateSuccessfulChangeResponse{
 		Status: successString,
 	})
 }
